--- a/views/product.ejs
+++ b/views/product.ejs
@@ -1,6 +1,6 @@
-<% include layout %>
-<h1><%= product.nom %></h1>
-<img src="<%= product.image %>" alt="<%= product.nom %>">
-<p><strong>Prix :</strong> <%= product.prix %></p>
-<p><strong>Description :</strong> <%= product.description %></p>
-<a href="/category/homme">Retour</a>
+<!-- <%- include('partials/header') %>
+<h2><%= product.nom %></h2>
+<img src="/img/<%= product.image %>" alt="<%= product.nom %>" width="200">
+<p><%= product.description %></p>
+<p>Prix : <%= product.prix %> €</p>
+<%- include('partials/footer') %> -->
