--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -1,35 +1,69 @@
-body {
-  font-family: Arial;
-  margin: 0;
-  padding: 0;
+footer{
+    padding: 10px 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: black;
+    color: white;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
-nav ul {
-  display: flex;
-  list-style: none;
-  background: #333;
-  padding: 10px;
+ 
+footer a{
+    text-decoration: none;
+    color: white;
 }
-nav ul li {
-  margin-right: 15px;
-}
-nav ul li a {
+h1{
+  background-color: blue;
+  text-align: center;
+  padding: 15px;
   color: white;
+}
+ul{
+list-style-type: none;
+padding: 10px;
+margin: 5px;
+font-size: 1.5rem;
+
+}
+li a{
   text-decoration: none;
+color: black;
+
 }
-main {
-  padding: 20px;
-}
-.product-list {
+.products {
   display: flex;
-  gap: 20px;
+  justify-content: center;
   flex-wrap: wrap;
+  gap: 30px;
+  margin: 40px;
 }
-.product-list li {
-  list-style: none;
-  width: 200px;
+
+.product-card {
   border: 1px solid #ccc;
-  padding: 10px;
+  border-radius: 10px;
+  padding: 20px;
+  width: 250px;
+  text-align: center;
 }
-.product-list img {
+
+.product-card img {
   width: 100%;
+  height: auto;
+  border-radius: 5px;
+}
+
+  h2 {
+  background-color: blue;
+  color: white;
+  padding: 1px;
+}
+
+footer {
+  background-color: blue;
+  color: white;
+  
+  
 }
